[tool.ruff]
target-version = "py311"
extend-select = ["I", "TRY", "UP"]

[tool.pytest.ini_options]
addopts = "--cov=supervisor_cfg/ --cov-report=term-missing"


[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "supervisor_cfg/__init__.py"

[tool.hatch.envs.default]
python = "3.11"
dependencies = [
    "black",
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov-xml = "pytest --cov-report=xml"
lint = [
  "black .",
  "ruff --fix .",
  "mypy supervisor_cfg/",
]
lint-check = [
  "black --check .",
  "ruff .",
  "mypy supervisor_cfg/",
]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "supervisor-cfg"
authors = [
  { name = "cbadger", email = "" }
]
description = "Plugin for supervisord to manipulate its config file(s)."
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.11"
dependencies = ["supervisor"]

[project.urls]
Documentation = "https://fkr0.github.io/supervisor-cfg/"
Source = "https://github.com/fkr-0/supervisor-cfg"
